--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,12 @@
 
 <p>
   <strong>Store:</strong>
-  <%= @product.store %>
+  <%= @product.store.name %>
+</p>
+
+<p>
+  <strong>name:</strong>
+  <%= @product.name %>
 </p>
 
 <p>
