display product cloud and latest min/max values

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,5 +1,15 @@
-.units-row
-  .unit-100
+.units-row#selected_product
+  .unit-50
+    .highest-price.color-red
+    .lowest-price.color-green
+
+  .unit-50
+    .unit-row-end
+      .unit-80
+        .text-right.name
+
+.unit-row
+  .unit-1oo
     .cloud{ :"data-path" => all_products_path }
 
 .units-row
