--- a/app/assets/stylesheets/dashboard.css.sass
+++ b/app/assets/stylesheets/dashboard.css.sass
@@ -1,7 +1,22 @@
-// Place all the styles related to the dashboard controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-
 .city-average-prices
   padding-top: 30px
+
+*[data-url]
+  text-shadow: 0
+
+*[data-url]:hover
+  text-shadow: 2px 2px 10px #FFFF00
+  border-bottom: 5px solid black
+
+#selected_product
+  min-height: 50px
+  .name
+    padding-right: 20px
+    font-size: 1.9em
+
+  .name, .highest-price, .lowest-price
+    font-family: Impact
+    font-weight: bold
+
+  .highest-price, .lowest-price
+    font-size: 1.4em
