--- a/app/assets/stylesheets/dashboard.css.sass
+++ b/app/assets/stylesheets/dashboard.css.sass
@@ -1,3 +1,14 @@
+header
+  text-align: center
+
+  #logo
+    font-family: 'GFS Neohellenic', sans-serif
+    font-size: 3em
+    font-weight: 700
+    border-bottom: 1px solid #333
+    color: #333
+
+font
 .city-average-prices
   padding-top: 30px
 
